--- a/frontend/mission-ops/src/app/transmission-queue/transmission-queue.component.html
+++ b/frontend/mission-ops/src/app/transmission-queue/transmission-queue.component.html
@@ -5,6 +5,7 @@
       <app-queued-telecommand class="list-group-item border border-primary" 
           [queuedTelecommand] = "queuedTelecommand" 
           [telecommands] = "telecommands"
+          [users] = "users"
           (reloadQueuedTelecommands)="reloadQueuedTelecommands($event)">
       </app-queued-telecommand>
     </div>
