Added error lines to graph if upper and lower bounds exist

--- a/frontend/mission-ops/src/app/telemetry-data/telemetry-data.component.html
+++ b/frontend/mission-ops/src/app/telemetry-data/telemetry-data.component.html
@@ -4,6 +4,8 @@
         [title] = "componentTelemetry.name"
         [xAxis] = "'Time'"
         [name] = "'Some Measurement'"
-        [labels] = "telemetryTimes"></app-chart>
+        [labels] = "telemetryTimes"
+        [maxValue] = "componentTelemetry.upperBound"
+        [minValue] = "componentTelemetry.lowerBound"></app-chart>
   </div>
 </div>
