--- a/frontend/mission-ops/src/app/telemetry-data/telemetry-data.component.html
+++ b/frontend/mission-ops/src/app/telemetry-data/telemetry-data.component.html
@@ -1,5 +1,5 @@
 <div *ngIf = "componentTelemetry">
-  <div *ngIf = "telemetryData">
+  <div *ngIf = "telemetryData; else noData">
         <app-chart [values] = "telemetryValues"
         [title] = "componentTelemetry.name"
         [xAxis] = "'Time'"
@@ -9,3 +9,11 @@
         [minValue] = "componentTelemetry.lowerBound"></app-chart>
   </div>
 </div>
+
+<ng-template #noData>
+  <div class = "text-center">
+    <div class = "spinner-border" role="status">
+      <span class="sr-only">Loading...</span>
+    </div>
+  </div>
+</ng-template>
