--- a/frontend/mission-ops/src/app/access-denied/access-denied.component.html
+++ b/frontend/mission-ops/src/app/access-denied/access-denied.component.html
@@ -2,9 +2,9 @@
 <p class="text-center">You seem to have taken a wrong turn somewhere, because you don't have access to this feature. Try going back or to the home page.</p>
 <div class="row">
   <div class="col text-center">
-    <button (click)="goBack()" class="btn btn-primary">Go Back</button>
+    <button (click)="goBack()" class="btn btn-outline-primary">Go Back</button>
   </div>
   <div class="col text-center">
-    <a routerLink="/" class="btn btn-secondary" role="button">Go Home</a>
+    <a routerLink="/" class="btn btn-outline-secondary" role="button">Go Home</a>
   </div>
 </div>
