--- a/frontend/mission-ops/src/app/preset-telecommand-details/preset-telecommand-details.component.html
+++ b/frontend/mission-ops/src/app/preset-telecommand-details/preset-telecommand-details.component.html
@@ -28,8 +28,11 @@
             <input [(ngModel)] = "presetTelecommand.dayDelay" class="form-control" name = "telecommandDayDelay">
         </div>
       </form>
-      <button (click)="savePresetTelecommand()" type="button" class="btn btn-success">Save Changes</button>
-      <button (click)="discardChanges()" type="button" class="btn btn-warning">Discard Changes</button>
-      <button (click)="deletePresetTelecommand()" type="button" class="btn btn-danger">Delete Preset Telecommand</button>
+      <br/>
+      <br/>
+
+      <button (click)="savePresetTelecommand()" type="button" class="btn btn-outline-success">Save Changes</button>
+      <button (click)="discardChanges()" type="button" class="btn btn-outline-warning">Discard Changes</button>
+      <button (click)="deletePresetTelecommand()" type="button" class="btn btn-outline-danger">Delete Preset Telecommand</button>
     </div>
 </div>
