--- a/frontend/mission-ops/src/app/queued-telecommand/queued-telecommand.component.html
+++ b/frontend/mission-ops/src/app/queued-telecommand/queued-telecommand.component.html
@@ -11,7 +11,7 @@
         <b>{{telecommandDetails.name}}</b>
         &nbsp;
         Exe. Time: {{getFormatedDate()}} UTC
-        <button (click)="deleteQueuedTelecommand()" type="button" class="btn btn-danger d-flex float-right"><i class = "fa fa-trash"></i></button>
+        <button (click)="deleteQueuedTelecommand()" type="button" class="btn btn-outline-danger d-flex float-right"><i class = "fa fa-trash"></i></button>
     </span>
   </div>
   <div id="queuedTelecommandDetailsPane" [ngbCollapse]="isCollapsed">
