Update chart values on refresh

--- a/frontend/mission-ops/src/app/telemetry-data/telemetry-data.component.html
+++ b/frontend/mission-ops/src/app/telemetry-data/telemetry-data.component.html
@@ -6,7 +6,9 @@
         [name] = "'Some Measurement'"
         [labels] = "telemetryTimes"
         [maxValue] = "componentTelemetry.upperBound"
-        [minValue] = "componentTelemetry.lowerBound"></app-chart>
+        [minValue] = "componentTelemetry.lowerBound"
+        [startDate] = "startDate"
+        [endDate] = "endDate"></app-chart>
   </div>
 </div>
 
