--- a/frontend/mission-ops/src/app/component-list/component-list.component.html
+++ b/frontend/mission-ops/src/app/component-list/component-list.component.html
@@ -30,7 +30,7 @@
               <label for ="endDate" class = "align-self-start" style="padding-right: 5px;padding-top: 5px;padding-left:5px;">To:</label>
               <app-datetime-picker class = "border" dateFormControlName = "endDate" timeFormControlName = "endTime" [formGroup] = "chooseDataRangeForm"></app-datetime-picker>
               <button class = "btn btn-success align-self-start" style="margin-left:5px" [disabled] = "!chooseDataRangeForm.valid">
-                Refresh
+                Refresh <i class="fa fa-refresh"></i>
               </button>
         </form>
       </div>
