--- a/frontend/mission-ops/src/app/queues/queues.component.html
+++ b/frontend/mission-ops/src/app/queues/queues.component.html
@@ -3,7 +3,7 @@
     <div class="btn-group" role="group">
       <button class = "btn btn-outline-success" (click) = "promptAddQueuedTelecommand()">Add Telecommand to Queue</button>
       <button class = "btn btn-outline-success" (click) = "promptAddQueuedTelecommandBatch()">Add Telecommand Batch to Queue</button>
-      <button class="btn btn-outline-success" (click)="addPass()">Add New Pass</button>
+      <button class="btn btn-outline-success" (click)="promptAddPass()">Add New Pass</button>
     </div>
     <br />
     <br />
