Fixed user representation in Add Telecommand/Telecommand Batch modal

--- a/frontend/mission-ops/src/app/create-queued-telecommand/create-queued-telecommand.component.html
+++ b/frontend/mission-ops/src/app/create-queued-telecommand/create-queued-telecommand.component.html
@@ -10,7 +10,7 @@
       <div class = "form-group">
         <label for = "system">User</label>
         <input type = "text"
-          [value] = "auth.getCurrentUser()?.name"
+          [value] = "auth.getCurrentUser()?.email"
           class = "form-control"
           name = "user"
           readonly/>
