Fixed user loading bugaroo in execution queue
- We forgot to pass through the users collection! oopses :squirrel:

--- a/frontend/mission-ops/src/app/execution-queue/execution-queue.component.html
+++ b/frontend/mission-ops/src/app/execution-queue/execution-queue.component.html
@@ -6,6 +6,7 @@
           <app-queued-telecommand class="list-group-item border border-primary" 
               [queuedTelecommand] = "queuedTelecommand" 
               [telecommands] = "telecommands"
+              [users] = "users"
               [orderRank] = "i + 1"
               (reloadQueuedTelecommands)="reloadQueuedTelecommands($event)">
           </app-queued-telecommand>
