--- a/frontend/mission-ops/src/app/media-library/media-library.component.html
+++ b/frontend/mission-ops/src/app/media-library/media-library.component.html
@@ -1,10 +1,16 @@
+<h2>Media Library</h2>
 <ng-container *ngIf="mediaList; else loadingSpinner">
   <div class="container">
     <div class="row">
-      <div *ngFor="let m of mediaList.items" class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+      <div *ngFor="let m of mediaList.items; index as i" class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
         <a href="media/view?id={{m.id}}" style="color: inherit">
           <div class="card">
-            <img src="{{m.previewSrc}}" class="card-img-top">
+            <img src="{{m.previewSrc}}" class="card-img-top" [hidden]="loading[i]" (load)="loading[i] = false">
+            <div *ngIf="loading[i]" class="text-center">
+              <div class="spinner-border" role="status">
+                <span class="sr-only">Loading...</span>
+              </div>
+            </div>
             <div class="card-body">
               <h5 class="card-title">
                 {{m.name}}
