Fixed headers still showing when they shouldnt

--- a/frontend/mission-ops/src/app/header/header.component.html
+++ b/frontend/mission-ops/src/app/header/header.component.html
@@ -4,7 +4,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav" [ngbCollapse]="isCollapsed">
-    <ul class="navbar-nav mr-auto">
+    <ul  *ngIf="auth.isAuthenticated()" class="navbar-nav mr-auto">
       <li *ngFor="let header of headers"
       (click)="onSelect(header)"
       [class.active]="header == activeHeader"
