Fixed telecommand batch second delay and remove totals

--- a/frontend/mission-ops/src/app/preset-telecommand-details/preset-telecommand-details.component.html
+++ b/frontend/mission-ops/src/app/preset-telecommand-details/preset-telecommand-details.component.html
@@ -16,6 +16,10 @@
         </div>
         <label >Relative Execution Time</label>
         <div class="form-group-inline">
+            <label >Seconds: </label>
+            <input [(ngModel)] = "presetTelecommand.secondDelay" class="form-control" name = "telecommandSecondDelay">
+        </div>
+        <div class="form-group-inline">
             <label >Minutes: </label>
             <input [(ngModel)] = "presetTelecommand.minuteDelay" class="form-control" name = "telecommandMinuteDelay">
         </div>
